✨projects app finished

--- a/django_lab/templates/projects/index.html
+++ b/django_lab/templates/projects/index.html
@@ -4,4 +4,7 @@
 
 {% block content %}
 <h1>Hei from a template!</h1>
+<div class="alert alert-warning" role="alert">
+    A simple warning alert—check it out!
+</div>
 {% endblock content %}
