--- a/django_lab/templates/account/password_change.html
+++ b/django_lab/templates/account/password_change.html
@@ -11,6 +11,7 @@
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
+        <a class="btn btn-primary" href="{% url 'users:detail' request.user.username  %}" role="button">{% translate "Back To" %} {% translate "My Profile" %}</a>
         <button class="btn btn-primary" type="submit" name="action">{% translate "Change Password" %}</button>
     </form>
 {% endblock %}
