--- a/django_lab/templates/base.html
+++ b/django_lab/templates/base.html
@@ -53,6 +53,9 @@
                 <a class="nav-link" href="{% url 'projects:all_projects' %}">Projects</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'blog:listing' %}">Blog</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
               {% if request.user.is_authenticated %}
