--- a/django_lab/templates/blog/listing.html
+++ b/django_lab/templates/blog/listing.html
@@ -6,7 +6,7 @@
 <h1>Blog Listing</h1>
 <ul>
 {% for blog in blogs %}
-  <li> <a href="{% url 'view_blog' blog.id %}">{{ blog.title }}</a> </li>
+  <li> <a href="{% url 'blog:view_blog' blog.id %}">{{ blog.title }}</a> </li>
 {% endfor %}
 </ul>
 {% endblock content %}
