--- a/django_lab/templates/blog/listing.html
+++ b/django_lab/templates/blog/listing.html
@@ -2,6 +2,8 @@
 
 {% block title %}Blog{% endblock %}
 
+{% comment %} Messages block exists in base.html {% endcomment %}
+
 {% block content %}
 <h1>Blog Listing</h1>
 <ul>
