--- a/django_lab/templates/base.html
+++ b/django_lab/templates/base.html
@@ -68,6 +68,9 @@
                 <a class="nav-link" href="{% url 'nearbyshops:home' %}">Nearby Shops</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'diary:entry-list' %}">Diary</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'about' %}">About</a>
               </li>
               {% if request.user.is_authenticated %}
