--- a/django_lab/templates/diary/entry_list.html
+++ b/django_lab/templates/diary/entry_list.html
@@ -1,8 +1,6 @@
 {% extends "diary/base.html" %}
 
-{% block content %}
-<h1><a href="/">Dear diary …</a></h1>
-
+{% block diary_content %}
 <div class="row mb-2">
   <div class="col-md-6">
     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -30,4 +28,4 @@
   {% endfor %}
 </div>
 
-{% endblock content %}
+{% endblock %}
