--- a/django_lab/templates/diary/entry_form.html
+++ b/django_lab/templates/diary/entry_form.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block content %}
+{% block diary_content %}
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
