--- a/django_lab/templates/diary/entry_detail.html
+++ b/django_lab/templates/diary/entry_detail.html
@@ -1,6 +1,6 @@
 {% extends "diary/base.html" %}
 
-{% block diary_content %}
+{% block content %}
 <article class="blog-post">
     <h2 class="blog-post-title">{{ entry.title }}</h2>
     <p class="blog-post-meta">{{ entry.date_created|date:'Y-m-d H:i' }}</p>
