--- a/django_lab/templates/diary/entry_confirm_delete.html
+++ b/django_lab/templates/diary/entry_confirm_delete.html
@@ -1,6 +1,6 @@
 {% extends "diary/base.html" %}
 
-{% block diary_content %}
+{% block content %}
     <form method="post">{% csrf_token %}
         <p>
             Are you sure you want to delete
