--- a/django_lab/templates/diary/entry_list.html
+++ b/django_lab/templates/diary/entry_list.html
@@ -1,6 +1,6 @@
 {% extends "diary/base.html" %}
 
-{% block diary_content %}
+{% block content %}
 <div class="row mb-2">
   <div class="col-md-6">
     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
