✨删除todo_app 的列表和item

--- a/django_lab/templates/todo_app/todo_list.html
+++ b/django_lab/templates/todo_app/todo_list.html
@@ -28,6 +28,11 @@
                 value="Add a new item"
                 type="button"
                 onclick="location.href='{% url "todo_app:item-add" todo_list.id %}'" />
+            <input
+            value="Delete this list"
+            type="button"
+            onclick="location.href=
+            '{% url "todo_app:list-delete" todo_list.id %}'" />
         </p>
     </div>
 </div>
