--- a/django_lab/templates/todo_app/todoitem_form.html
+++ b/django_lab/templates/todo_app/todoitem_form.html
@@ -17,6 +17,13 @@
         value="Cancel"
         type="button"
         onclick="location.href='{% url "todo_app:list" todo_list.id %}'">
+    {% if object %}
+        <input
+            value="Delete this item"
+            type="button"
+            onclick="location.href=
+            '{% url "todo_app:item-delete" todo_list.id object.id %}'">
+    {% endif %}
 </form>
 
 {% endblock %}
