--- a/django_lab/templates/todo_app/todo_list.html
+++ b/django_lab/templates/todo_app/todo_list.html
@@ -7,9 +7,9 @@
             <h3>Edit list:</h3>
             <h5>{{ todo_list.title | upper }}</h5>
         </div>
-        <ul>
+        <ul class="list-group">
             {% for todo in object_list %}
-            <li>
+            <li class="list-group-item list-group-item-primary">
                 <div>
                     <div
                         role="button"
@@ -23,16 +23,16 @@
             <p>There are no to-do items in this list.</p>
             {% endfor %}
         </ul>
-        <p>
+        <p class="btn-group">
             <input
                 value="Add a new item"
                 type="button"
-                onclick="location.href='{% url "todo_app:item-add" todo_list.id %}'" />
+                onclick="location.href='{% url "todo_app:item-add" todo_list.id %}'" class="btn btn-primary my-2" />
             <input
             value="Delete this list"
             type="button"
             onclick="location.href=
-            '{% url "todo_app:list-delete" todo_list.id %}'" />
+            '{% url "todo_app:list-delete" todo_list.id %}'" class="btn btn-danger my-2" />
         </p>
     </div>
 </div>
