--- a/django_lab/templates/todo_app/todoitem_form.html
+++ b/django_lab/templates/todo_app/todoitem_form.html
@@ -12,17 +12,19 @@
     </table>
     <input
         value="Submit"
-        type="submit">
+        type="submit" class="btn btn-primary my-2">
     <input
         value="Cancel"
         type="button"
-        onclick="location.href='{% url "todo_app:list" todo_list.id %}'">
+        onclick="location.href='{% url "todo_app:list" todo_list.id %}'"
+        class="btn btn-secondary my-2">
     {% if object %}
         <input
             value="Delete this item"
             type="button"
             onclick="location.href=
-            '{% url "todo_app:item-delete" todo_list.id object.id %}'">
+            '{% url "todo_app:item-delete" todo_list.id object.id %}'"
+            class="btn btn-danger my-2">
     {% endif %}
 </form>
 
